# stik

./: CHANGELOG.md  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tray.rs  windows.rs
src-tauri/src/commands/: cursor_positions.rs  darwinkit.rs  index.rs  mod.rs  notes.rs  settings.rs  sticked_notes.rs  storage.rs
src/components/: AiMenu.tsx  AnalyticsNotice.tsx  CommandPalette.tsx  ConfirmDialog.tsx  Editor.tsx  FolderPicker.tsx  LockPrompt.tsx  PostIt.tsx  SettingsContent.tsx  SettingsModal.tsx  ShortcutRecorder.tsx
src/components/command-palette/: MovePicker.tsx
src/extensions/: cm-theme.ts
src/styles/: globals.css
src/themes/: index.ts
