[package]
name = "memo"
version = "0.8.0"
description = "Instant thought capture"
authors = ["Massi"]
edition = "2021"

[lib]
name = "stik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset", "devtools"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = "0.12"
arboard = "3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-dialog = "2.6.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
flate2 = "1"
prost = "0.13"
aes-gcm = "0.10"
rand = "0.8"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
objc2 = { version = "0.6.3", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSView", "NSBitmapImageRep", "NSImageRep", "NSApplication", "NSRunningApplication"] }
core-graphics = "0.24"
core-foundation = "0.10"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSData", "NSDictionary", "NSGeometry"] }

[dev-dependencies]
glib = ">=0.20"

[features]
# The custom-protocol feature tells tauri-codegen to embed the frontend
# from `frontendDist` instead of connecting to `devUrl`. `cargo tauri
# build` enables it implicitly; `cargo tauri dev` leaves it off so the
# vite dev server is used. Our dev-rebuild.sh passes it explicitly via
# `cargo build --features custom-protocol` because it bypasses tauri-cli.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
